--- a/app/src/main/res/layout/activity_real_estate_detail.xml
+++ b/app/src/main/res/layout/activity_real_estate_detail.xml
@@ -1,324 +1,223 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context=".RealEstateDetail">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <ImageView
             android:id="@+id/room_image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:src="@drawable/room1"
-            android:scaleType="fitXY"
-            android:layout_centerInParent="true"
             android:layout_gravity="center"
             android:background="@color/white"
-            />
+            android:scaleType="fitXY"
+            android:src="@drawable/room1" />
 
         <TextView
             android:id="@+id/room_event"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" 유진 "
-            android:textSize="15dp"
-            android:textColor="#FFFFFF"
-            android:background="#804FB7F8"
-            android:layout_marginTop="10dp"
             android:layout_gravity="left|top"
-            />
+            android:layout_marginTop="10dp"
+            android:background="#804FB7F8"
+            android:text=" 유진 "
+            android:textColor="#FFFFFF"
+            android:textSize="15sp" />
     </FrameLayout>
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="매물 정보"
-        android:textColor="#5A4D44"
-        android:textSize="21dp" />
 
     <LinearLayout
-        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_weight="7"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="20dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="5dp">
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:text="건물명"
-                android:textColor="@color/colorPrimaryDark"
-                />
-
-            <EditText
-                android:enabled="false"
-                android:layout_marginLeft="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="유진"
-                android:id="@+id/room_title"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="5dp">
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:text="주소"
-                android:textColor="@color/colorPrimaryDark"
-                />
-
-            <EditText
-                android:layout_marginLeft="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="유진"
-                android:enabled="false"
-                android:id="@+id/room_dong"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="5dp">
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:text="보증금"
-                android:textColor="@color/colorPrimaryDark"/>
-
-            <EditText
-                android:layout_marginLeft="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="유진"
-                android:enabled="false"
-                android:id="@+id/room_desc"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="5dp">
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:text="월세금"
-                android:textColor="@color/colorPrimaryDark"/>
-
-            <EditText
-                android:enabled="false"
-                android:layout_marginLeft="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/room_monthly"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="5dp">
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:text="면적"
-                android:textColor="@color/colorPrimaryDark"/>
-
-            <EditText
-                android:enabled="false"
-                android:layout_marginLeft="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:id="@+id/room_m2"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="5dp">
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:text="건축년도"
-                android:textColor="@color/colorPrimaryDark"/>
-
-            <EditText
-                android:enabled="false"
-                android:layout_marginLeft="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:id="@+id/room_build"/>
-        </LinearLayout>
-
-
-
-        <LinearLayout
-            android:layout_gravity="center"
-            android:layout_marginTop="15dp"
-            android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="20dp"
-            android:background="@drawable/yeop_button_style">
-
-        <ImageView
-            android:id="@+id/user_icon"
-            android:layout_weight="0"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/user" />
-
-        <Button
-            android:onClick="LandlordCreditViewApplyButton"
-            android:layout_weight="0"
-            android:layout_marginLeft="20dp"
-            android:id="@+id/btn_accept"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/round_square_background_thumb"
-            android:textColor="@color/white"
-            android:text=" 임대인 신용 열람 신청 "/>
-
-    </LinearLayout>
-
-
-
-    </LinearLayout>
-
-    <!--<LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/room_image"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:src="@drawable/room1"
-                android:scaleType="fitXY"
-                android:layout_centerInParent="true"
-                android:layout_gravity="center"
-                android:background="@color/white"
-                />
-
-            &lt;!&ndash; 이벤트 알려주기 &ndash;&gt;
-            <TextView
-                android:id="@+id/room_event"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=" 유진 "
-                android:textSize="15dp"
-                android:textColor="#FFFFFF"
-                android:background="#804FB7F8"
-                android:layout_marginTop="10dp"
-                android:layout_gravity="left|top"
-                />
-
-        </FrameLayout>
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:text="매물 정보"
+            android:textStyle="bold"
+            android:textColor="#5A4D44"
+            android:textSize="21sp" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="5"
-            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="7"
             android:orientation="vertical">
-            <TextView
-                android:id="@+id/room_title"
-                android:singleLine="true"
-                android:layout_gravity="center"
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:orientation="horizontal">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:text="건물명"
+                    android:textColor="@color/colorPrimaryDark" />
+
+                <EditText
+                    android:id="@+id/room_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:enabled="false"
+                    android:text="유진" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:orientation="horizontal">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:text="주소"
+                    android:textColor="@color/colorPrimaryDark" />
+
+                <EditText
+                    android:id="@+id/room_dong"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:enabled="false"
+                    android:text="유진" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:orientation="horizontal">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:text="보증금"
+                    android:textColor="@color/colorPrimaryDark" />
+
+                <EditText
+                    android:id="@+id/room_desc"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:enabled="false"
+                    android:text="유진" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:orientation="horizontal">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:text="월세금"
+                    android:textColor="@color/colorPrimaryDark" />
+
+                <EditText
+                    android:id="@+id/room_monthly"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:enabled="false" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:orientation="horizontal">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:text="면적"
+                    android:textColor="@color/colorPrimaryDark" />
+
+                <EditText
+                    android:id="@+id/room_m2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:enabled="false"
+                    android:text="" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:orientation="horizontal">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:text="건축년도"
+                    android:textColor="@color/colorPrimaryDark" />
+
+                <EditText
+                    android:id="@+id/room_build"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:enabled="false"
+                    android:text="" />
+            </LinearLayout>
+
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="유진건물"
-                android:textColor="#5A4D44"
-                android:textSize="21dp" />
-                <TextView
-                    android:id="@+id/room_desc"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/yeop_button_style"
+                android:orientation="horizontal"
+                android:padding="0dp"
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/user_icon"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="0"
+                    android:src="@drawable/user"
+                    android:layout_margin="10dp"/>
+
+                <Button
+                    android:id="@+id/btn_accept"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="유진건물"
-                    android:textColor="#B9B9B9"
-                    android:textSize="14dp"/>
-            <TextView
-                android:id="@+id/room_monthly"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="유진건물"
-                android:textColor="#B9B9B9"
-                android:textSize="14dp"/>
-            <TextView
-                android:id="@+id/room_dong"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="유진건물"
-                android:textColor="#B9B9B9"
-                android:textSize="14dp"/>
-            <TextView
-                android:id="@+id/room_m2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="유진건물"
-                android:textColor="#B9B9B9"
-                android:textSize="14dp"/>
-            <TextView
-                android:id="@+id/room_build"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="유진건물"
-                android:textColor="#B9B9B9"
-                android:textSize="14dp"/>
+                    android:layout_margin="10dp"
+                    android:layout_weight="0"
+                    android:background="@drawable/round_square_background_thumb"
+                    android:onClick="LandlordCreditViewApplyButton"
+                    android:text=" 임대인 신용 열람 신청 "
+                    android:textColor="@color/white" />
+
+            </LinearLayout>
+
+
         </LinearLayout>
 
-        <Button
-            android:onClick="LandlordCreditButton"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-
-            android:background="@drawable/yeop_button_style"
-            android:text="임대인 신용 열람 신청"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="17dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="5dp"/>
-    </LinearLayout>-->
-
-
+    </LinearLayout>
 </LinearLayout>
