--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,26 +9,36 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-    <Spinner
-        android:id="@+id/area_spinner"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:autofillHints="지역구를 선택해 주세요"
-        android:entries="@array/Area_Spinner_Items"
-        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        android:textColor="@color/black"/>
+        android:orientation="vertical"
+        android:padding="10dp">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/real_estate_list"
-        >
-    </androidx.recyclerview.widget.RecyclerView>
-</LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="17sp"
+            android:text="지역구 선택"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_marginStart="5dp"
+            android:layout_marginBottom="5dp"/>
+
+        <Spinner
+            android:id="@+id/area_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autofillHints="지역구를 선택해 주세요"
+            android:entries="@array/Area_Spinner_Items"
+            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            android:textColor="@color/black"
+            android:layout_marginBottom="10dp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/real_estate_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"/>
+    </LinearLayout>
 </RelativeLayout>
