--- a/app/src/main/res/layout/activity_trade_add_view.xml
+++ b/app/src/main/res/layout/activity_trade_add_view.xml
@@ -95,6 +95,7 @@
         </LinearLayout>
 
         <Button
+            android:onClick="TradeAddButtonClicked"
             android:id="@+id/btn_add_account"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
